update compose files

--- a/echo_bot/compose.debug.yaml
+++ b/echo_bot/compose.debug.yaml
@@ -1,6 +1,6 @@
 services:
-  telegrambotlearning:
-    image: telegrambotlearning
+  echobot:
+    image: echobot
     build:
       context: .
       dockerfile: ./Dockerfile
