--- a/echo_bot/compose.yaml
+++ b/echo_bot/compose.yaml
@@ -1,10 +1,8 @@
 services:
-  telegrambotlearning:
-    image: telegrambotlearning
+  echobot:
+    image: echobot
     build:
       context: .
       dockerfile: ./Dockerfile
-    env_file:
-      - ../.env
     environment:
       - BOT_TOKEN=${BOT_TOKEN}
