refactor the code so to support routers

--- a/echo_bot/compose.yaml
+++ b/echo_bot/compose.yaml
@@ -4,5 +4,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    environment:
-      - BOT_TOKEN=${BOT_TOKEN}
+    env_file:
+      - .env
+    # environment:
+    #   - BOT_TOKEN=${BOT_TOKEN}
