--- a/echo_bot/.dockerignore
+++ b/echo_bot/.dockerignore
@@ -2,7 +2,7 @@
 **/.venv
 **/.classpath
 **/.dockerignore
-**/.env
+**/.env*
 **/.git
 **/.gitignore
 **/.project
@@ -25,3 +25,4 @@
 **/values.dev.yaml
 LICENSE
 README.md
+
