--- a/fsm/compose.yaml
+++ b/fsm/compose.yaml
@@ -6,3 +6,23 @@ services:
       dockerfile: ./Dockerfile
     env_file:
       - .env
+    depends_on:
+      redis:
+        condition: service_healthy
+  redis:
+    image: redis:8.4.0
+    volumes:
+      - redis_data:/data
+    command: redis-server --save 60 1 --loglevel warning
+    restart: on-failure
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
+volumes:
+  redis_data:
